# openepd

./: .flake8  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  Makefile  README.md  poetry.toml  pyproject.toml  requirements-dev.txt
.github/workflows/: backmerge.yml  build-and-publish-wheel.yml  generate-changelog.yml  release.yml  run-tests.yml  sanity-check.yml
development/: copyright.tmpl  ensure-dependencies.sh
doc/: release.md
src/openepd/: __init__.py  __version__.py  patch_pydantic.py
src/openepd/api/: base_api_client.py  base_async_client.py  base_sync_client.py  common.py  errors.py  sync_client.py  utils.py
src/openepd/api/average_dataset/: generic_estimate_sync_api.py  industry_epd_sync_api.py
src/openepd/api/category/: dto.py  sync_api.py
src/openepd/api/dto/: base.py  common.py  meta.py  mf.py
src/openepd/api/epd/: dto.py  sync_api.py
src/openepd/api/org/: sync_api.py
src/openepd/api/pcr/: dto.py  sync_api.py
src/openepd/api/plant/: sync_api.py
src/openepd/api/standard/: sync_api.py
src/openepd/api/test/: test_common.py  test_sync_api_client.py
src/openepd/bundle/: __init__.py  base.py  model.py  reader.py  writer.py
src/openepd/bundle/tests/: __init__.py  test_reader.py  test_writer.py
src/openepd/bundle/tests/data/: test-bundle-corrupted-manifest.epb  test-bundle-missing-manifest.epb  test-bundle-missing-toc.epb  test-bundle.epb
src/openepd/bundle/tests/data/source/: extraction-report.txt  test-pcr.json
src/openepd/category/: __init__.py  base.py  generated.py  search.py
src/openepd/category/tests/: test_base.py  test_generated.py
src/openepd/compat/: compat_functional_validators.py  pydantic.py
src/openepd/constants/: scope_phases.py
src/openepd/m49/: __init__.py  const.py  geo_converter.py  test_tree.py  test_utils.py  tree.py  utils.py
src/openepd/m49/tests/: __init__.py  test_geo_converter.py
src/openepd/model/: base.py  category.py  category_meta.py  common.py  declaration.py  epd.py  factory.py  generic_estimate.py  geo_converter.py  geography.py  industry_epd.py  lcia.py  m49.py  org.py  orgs.py  pcr.py  resource.py  standard.py  validation.py  versioning.py
src/openepd/model/extensions/: carbon.py
src/openepd/model/light/: epd.py  factory.py  generic_estimate.py  industry_epd.py
src/openepd/model/specs/: README.md  __init__.py  aluminium.py  asphalt.py  base.py  concrete.py  enums.py  factory.py  glass.py  mixins.py  steel.py  wood.py
src/openepd/model/specs/range/: __init__.py  accessories.py  aggregates.py  aluminium.py  asphalt.py  bulk_materials.py  cast_decks_and_underlayment.py  cladding.py  cmu.py  concrete.py  conveying_equipment.py  electrical.py  electrical_transmission_and_distribution_equipment.py  electricity.py  exterior_improvements.py  finishes.py  fire_and_smoke_protection.py  furnishings.py  grouting.py  manufacturing_inputs.py  masonry.py  material_handling.py  mechanical.py  mechanical_insulation.py  network_infrastructure.py  non_construction.py  openings.py  other_electrical_equipment.py  other_materials.py  plumbing.py  precast_concrete.py  sheathing.py  steel.py  thermal_moisture_protection.py  utility_piping.py  wood.py  wood_joists.py
src/openepd/model/specs/range/mixins/: access_flooring_mixin.py
src/openepd/model/specs/singular/: __init__.py  accessories.py  aggregates.py  aluminium.py  asphalt.py  bulk_materials.py  cast_decks_and_underlayment.py  cladding.py  cmu.py  common.py  concrete.py  conveying_equipment.py  electrical.py  electrical_transmission_and_distribution_equipment.py  electricity.py  exterior_improvements.py  finishes.py  fire_and_smoke_protection.py  furnishings.py  grouting.py  manufacturing_inputs.py  masonry.py  material_handling.py  mechanical.py  mechanical_insulation.py  network_infrastructure.py  non_construction.py  openings.py  other_electrical_equipment.py  other_materials.py  plumbing.py  precast_concrete.py  sheathing.py  steel.py  thermal_moisture_protection.py  utility_piping.py  wood.py  wood_joists.py
src/openepd/model/specs/singular/deprecated/: __init__.py  concrete.py  steel.py
src/openepd/model/specs/singular/mixins/: access_flooring_mixin.py  conduit_mixin.py
src/openepd/model/tests/: common.py  test_average_datasets.py  test_base.py  test_category.py  test_category_meta.py  test_epd.py  test_factory.py  test_geo_converter.py  test_lcia.py  test_org.py  test_pcr.py  test_plant.py  test_schema_gen.py  test_spec_completeness.py  test_spec_validation.py  test_spec_versions.py  test_specs.py
src/openepd/model/validation/: common.py  enum.py  numbers.py  quantity.py
src/openepd/mypy/: custom_pydantic_plugin.py
src/openepd/omf/: dto.py  errors.py  operators.py  supported_versions.py
src/openepd/querylang/: __init__.py  const.py  dto.py  errors.py  mapping.py  operators.py  test_mapping.py  types.py
src/openepd/utils/: functional.py  markdown.py  none_raises.py  reflection.py
src/openepd/utils/mapping/: common.py  geography.py  test_geography.py  test_mapping.py
tools/openepd/: __init__.py
tools/openepd/codegen/: UNSD — Methodology.csv  category_generated.py.tpl  category_hierarchical.json  generate_category_tree.py  generate_geography_enum.py  generate_missing_category_meta_prompts.py  generate_range_spec_models.py  geography_enum.py.tpl  range_spec.py.tpl
